repository interface added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-# MySQL parameters
-#user=hero
-#password=superhero1234
-#url=jdbc:mysql://localhost:3306/superhero
-
-# mandatory property names
+# database info
 spring.datasource.url=jdbc:mysql://localhost:3306/superhero
 spring.datasource.username=root
 spring.datasource.password=root
+
+# selected repository implementation
 superhero.repository=real_database
 
+# deselect white label pages
 server.error.whitelabel.enabled=false
