--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # database info
-spring.datasource.url=jdbc:mysql://localhost:3306/superhero
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/superhero
 spring.datasource.username=root
 spring.datasource.password=root
 
