--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # database info
-spring.datasource.url=jdbc:mysql://Lars-Air-M2:3307/superhero
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/superhero
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -8,3 +8,5 @@ superhero.repository=real_database
 
 # deselect white label pages
 server.error.whitelabel.enabled=false
+
+server.port=8080
