Optimized the docker-compose experience

--- a/Dockerfile.mysql
+++ b/Dockerfile.mysql
@@ -1,6 +1,6 @@
 FROM mysql:8.0
 
-# ENV MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
 
 COPY src/mysql/init/* /docker-entrypoint-initdb.d/
 
